--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swiper": "^8.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
